--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -8,14 +8,17 @@
 	<script type="text/javascript" src="js/gemStore.js"></script>
 </head>
 <body ng-controller="StoreController as store">
-	<div class="row">
-		<div class="col-md-12">
-			<p>
-				{{store.product.name}}
-				<em>{{store.product.price}}</em>
-			</p>
+	<div class="container">
+		<div class="products">
+			<div class="row">
+				<div class="col-md-6" ng-hide="store.product.soldOut">
+					{{store.product.name}} <em>${{store.product.price}}</em>
+					<button ng-show="store.product.canPurchase" ng-click="store.purchase()">Add to cart!</button>
+				</div>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 </body>
 </html>
