--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -2,22 +2,22 @@
 <html ng-app="gemStore">
 <head>
 	<meta charset="UTF-8">
-	<title>Ejercicio 1</title>
+	<title>Ejercicio 4</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/angular.min.js"></script>
-	<script type="text/javascript" src="js/gemStore.js"></script>
 </head>
 <body ng-controller="StoreController as store">
 	<div class="container">
 		<div class="products">
 			<div class="row">
-				<div class="col-md-6" ng-hide="store.product.soldOut">
-					{{store.product.name}} <em>${{store.product.price}}</em>
-					<button ng-show="store.product.canPurchase" ng-click="store.purchase()">Add to cart!</button>
+				<div class="col-md-12" ng-repeat="product in store.products" ng-hide="product.soldOut">
+					{{product.name}} <em>${{product.price}}</em>
+					<button ng-show="product.canPurchase" ng-click="store.purchase(product)">Add to cart!</button>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="js/gemStore.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 </body>
