--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -2,7 +2,7 @@
 <html ng-app="gemStore">
 <head>
 	<meta charset="UTF-8">
-	<title>Clase 2 | Ejercicio 2</title>
+	<title>GemStore</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -50,5 +50,6 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/angular-locale_es-ar.js"></script>
+	<script type="text/javascript" src="js/tabController.js"></script>
 </body>
 </html>
