--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -82,5 +82,6 @@
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/angular-locale_es-ar.js"></script>
 	<script type="text/javascript" src="js/tabController.js"></script>
+	<script type="text/javascript" src="js/galleryController.js"></script>
 </body>
 </html>
