--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -68,12 +68,16 @@
 	                    </div>
 	                    
 	                    <div ng-show="tab.isSet(3)">
-	                        <h4>Reviews</h4>
-	                        <div class="reviews" ng-repeat="review in product.reviews">
-	                        	<img src="images/star.jpg" width="15px">&nbsp;<strong>{{ review.stars }}</strong>
-                        		<p><strong>Autor:</strong> <em>{{ review.author }}</em></p>
-	                        	<p><strong>Review:</strong> <em>{{ review.body }}</p></em>
-	                        </div>
+	                    	<div class="row">
+	                    		<div class="col-md-8">
+		                        	<h4>Reviews</h4>
+			                        <div class="reviews" ng-repeat="review in product.reviews">
+			                        	<strong>{{ review.stars }}</strong><img src="images/star.png" width="15px">
+		                        		<p><strong>Autor:</strong> <em>{{ review.author }}</em></p>
+			                        	<p><strong>Review:</strong> <em>{{ review.body }}</p></em>
+			                        </div>
+	                    		</div>
+	                    	</div>
 	                    </div>
 	                </section>
 				</div>
