--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -77,6 +77,26 @@
 			                        	<p><strong>Review:</strong> <em>{{ review.body }}</p></em>
 			                        </div>
 	                    		</div>
+	                    		<div class="col-md-4">
+	                    			<form action="">
+	                    				<p>Rate this product</p>
+	                    				<fieldset class="form-group">
+
+											<select ng-model="review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars">
+												<option value="">Rate the Product</option>
+											</select>
+										</fieldset>
+										<fieldset class="form-group">
+											<textarea ng-model="review.body" class="form-control" placeholder="Describe your review..." title="Review"></textarea>
+										</fieldset>
+										<fieldset class="form-group">
+											<input ng-model="review.author" type="email" class="form-control" placeholder="name@domain.com" title="email" />
+										</fieldset>
+										<fieldset class="form-group">
+											<input type="submit" class="btn btn-primary" value="Submit Review" />
+										</fieldset>
+	                    			</form>
+	                    		</div>
 	                    	</div>
 	                    </div>
 	                </section>
