--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -117,12 +117,13 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/angular.min.js"></script>
-	<script type="text/javascript" src="js/gemStore.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/angular-locale_es-ar.js"></script>
+	<script type="text/javascript" src="js/gemStore.js"></script>
 	<script type="text/javascript" src="js/tabController.js"></script>
 	<script type="text/javascript" src="js/galleryController.js"></script>
+	<script type="text/javascript" src="js/reviewController.js"></script>
 </body>
 </html>
