--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -78,15 +78,15 @@
 			                        </div>
 	                    		</div>
 	                    		<div class="col-md-4">
-	                    			<form ng-controller="reviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)" name="submitReview">
+	                    			<form ng-controller="reviewController as reviewCtrl" ng-submit="submitReviewForm.$valid && reviewCtrl.addReview(product)" name="submitReviewForm" novalidate>
 	                    				<p>Rate this product</p>
 	                    				<fieldset class="form-group">
-											<select ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" name="stars">
+											<select ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" name="stars" required>
 												<option value="">Rate the Product</option>
 											</select>
 										</fieldset>
 										<fieldset class="form-group">
-											<input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="name@domain.com" title="email" name="author"/>
+											<input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="name@domain.com" title="email" name="author" required/>
 										</fieldset>
 										<fieldset class="form-group">
 											<textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Describe your review..." title="Review" name="review"></textarea>
@@ -95,16 +95,16 @@
 											<input type="submit" class="btn btn-primary" value="Submit Review" />
 										</fieldset>
 	                    			
-		                    			<div ng-show="submitReview.$dirty">
+		                    			<div ng-show="submitReviewForm.$dirty">
 			                    			<h4>Preview</h4>
 			                    			<div class="reviews">
-												<div ng-show="submitReview.stars.$dirty">
+												<div ng-show="submitReviewForm.stars.$dirty">
 													<strong>{{ reviewCtrl.review.stars }}</strong><img src="images/star.png" width="15px">
 												</div>
-				                        		<div ng-show="submitReview.author.$dirty">
+				                        		<div ng-show="submitReviewForm.author.$dirty">
 				                        			<p><strong>Author:</strong> <em>{{ reviewCtrl.review.author }}</em></p>
 				                        		</div>
-				                        		<div ng-show="submitReview.review.$dirty">
+				                        		<div ng-show="submitReviewForm.review.$dirty">
 				                        			<p><strong>Review:</strong> <em>{{ reviewCtrl.review.body }}</em></p>
 				                        		</div>
 				                        	</div>
