--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -78,21 +78,21 @@
 			                        </div>
 	                    		</div>
 	                    		<div class="col-md-4">
-	                    			<form ng-controller="reviewController as reviewCtrl" ng-submit="submitReviewForm.$valid && reviewCtrl.addReview(product)" name="submitReviewForm" novalidate>
+	                    			<form ng-controller="reviewController as reviewCtrl" ng-submit="submitReviewForm.$valid && reviewCtrl.addReview(product) && submitReviewForm.$setPristine()" name="submitReviewForm" novalidate>
 	                    				<p>Rate this product</p>
-	                    				<fieldset class="form-group">
+	                    				<fieldset class="form-group" ng-class="{'has-error': submitReviewForm.stars.$dirty && submitReviewForm.stars.$invalid}">
 											<select ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" name="stars" required>
 												<option value="">Rate the Product</option>
 											</select>
 										</fieldset>
-										<fieldset class="form-group">
+										<fieldset class="form-group" ng-class="{'has-error': submitReviewForm.author.$dirty && submitReviewForm.author.$invalid}">
 											<input ng-model="reviewCtrl.review.author" type="email" class="form-control" placeholder="name@domain.com" title="email" name="author" required/>
 										</fieldset>
 										<fieldset class="form-group">
-											<textarea ng-model="reviewCtrl.review.body" class="form-control" placeholder="Describe your review..." title="Review" name="review"></textarea>
+											<textarea ng-model="reviewCtrl.review.body" class="form-control" ng-class="{'has-error': submitReviewForm.review.$dirty && submitReviewForm.review.$invalid}" placeholder="Describe your review..." title="Review" name="review" required></textarea>
 										</fieldset>
 										<fieldset class="form-group">
-											<input type="submit" class="btn btn-primary" value="Submit Review" />
+											<input type="submit" class="btn btn-primary" ng-class="submitReviewForm.$dirty && submitReviewForm.$invalid ? 'btn-danger' : 'btn-primary'" value="Submit Review" />
 										</fieldset>
 	                    			
 		                    			<div ng-show="submitReviewForm.$dirty">
