--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -57,10 +57,7 @@
 	                        </li>
 	                    </ul>
 	                    
-	                    <div ng-show="tab.isSet(1)">
-	                        <h4>Description</h4>
-	                        <blockquote>{{ product.description }}</blockquote>
-	                    </div>
+	                    <div ng-show="tab.isSet(1)" ng-include="'productDescription.html'"></div>
 	                    
 	                    <div ng-show="tab.isSet(2)">
 	                        <h4>Specs</h4>
