--- a/gemStore/index.html
+++ b/gemStore/index.html
@@ -25,26 +25,13 @@
 	<div class="container">
 		<div ng-repeat="product in store.products" ng-hide="product.soldOut">
 			<div class="row" ng-if="product.images.length">
-				<div class="col-md-3" ng-controller="GalleryController as gallery">
-					<div class="product well text-center">
-						<div class="row">
-							<div class="col-md-12">
-								<img class="img-thumbnail" ng-src="{{product.images[gallery.current]}}">
-							</div>
-						</div>
-						<div class="row">
-							<ul class="listPreview">
-								<li ng-repeat="image in product.images">
-									<img class="img-thumbnail" ng-src="{{ image }}" ng-click="gallery.setCurrent($index)" width="30%" > <!-- $index es el index del ng-repeat -->
-								</li>
-							</ul>
-						</div>
-						<h4>{{product.name}} <em>{{product.price | currency}}</em></h4>
-						<button ng-show="product.canPurchase" ng-click="store.purchase(product)">Add to cart!</button>
-					</div>
+				<div class="col-md-3">
+		
+					<product-gallery></product-gallery>
+		
 				</div>
 				<div class="col-md-9">
-					
+		
 					<product-tabs></product-tabs>
 					
 				</div>
@@ -58,6 +45,7 @@
 	<script type="text/javascript" src="js/gemStore.js"></script>
 	<script type="text/javascript" src="js/galleryController.js"></script>
 	<script type="text/javascript" src="js/reviewController.js"></script>
+	<script type="text/javascript" src="js/productGalleryDirective.js"></script>
 	<script type="text/javascript" src="js/productDescriptionDirective.js"></script>
 	<script type="text/javascript" src="js/productSpecsDirective.js"></script>
 	<script type="text/javascript" src="js/productReviewsDirective.js"></script>
